--- a/greatesthits.css
+++ b/greatesthits.css
@@ -2,3 +2,11 @@
     text-align: left;
 }
 
+#main {
+    min-height: 50px;
+    max-height: 50px;
+    height: 50px;
+    border: 1px solid red;
+    text-align: center;
+    vertical-align: middle;
+}
